--- a/src/components/contact/Header.module.css
+++ b/src/components/contact/Header.module.css
@@ -2,13 +2,17 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 40px;
+    height: 50px;
 }
 
 .input {
-    width: 300px;
+    width: 230px;
 }
 
 .header span {
     font-size: 18px;
+}
+
+.logout {
+    margin-top: 5px;
 }
