Added adaptiv and fixed readme file

--- a/src/components/contact/Header.module.css
+++ b/src/components/contact/Header.module.css
@@ -16,3 +16,22 @@
 .logout {
     margin-top: 5px;
 }
+
+@media (max-width: 800px) {
+    .count {
+        display: none;
+    }
+}
+
+@media (max-width: 500px) {
+    .input {
+        width: 160px;
+    }
+}
+
+@media (max-width: 420px) {
+    .input {
+        width: 140px;
+    }
+}
+
