--- a/src/components/auth/Login.module.css
+++ b/src/components/auth/Login.module.css
@@ -6,3 +6,11 @@
 .mb_15 {
     margin-bottom: 15px;
 }
+
+@media (max-width: 700px) {
+    .login {
+        border: none;
+        border-bottom: 1px solid;
+        padding-bottom: 20px;
+    }
+}
