--- a/src/components/auth/Register.module.css
+++ b/src/components/auth/Register.module.css
@@ -6,3 +6,10 @@
 .mb_15 {
     margin-bottom: 15px;
 }
+
+@media (max-width: 700px) {
+    .register {
+        border: none;
+        padding-top: 10px;
+    }
+}
